// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkboxes matches snapshot (via server): client 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <div
      class="nhsuk-checkboxes"
      data-module="nhsuk-checkboxes"
      data-nhsuk-checkboxes-init=""
      id="example"
    >
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-1"
          name="example"
          type="checkbox"
          value="animal"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-1"
          id="example-1--label"
        >
          Waste from animal carcasses
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-2"
          name="example"
          type="checkbox"
          value="mines"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-2"
          id="example-2--label"
        >
          Waste from mines or quarries
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-3"
          name="example"
          type="checkbox"
          value="farm"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-3"
          id="example-3--label"
        >
          Farm or agricultural waste
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkboxes matches snapshot (via server): server 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <div
      class="nhsuk-checkboxes"
      data-module="nhsuk-checkboxes"
      id="example"
    >
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-1"
          name="example"
          type="checkbox"
          value="animal"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-1"
          id="example-1--label"
        >
          Waste from animal carcasses
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-2"
          name="example"
          type="checkbox"
          value="mines"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-2"
          id="example-2--label"
        >
          Waste from mines or quarries
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-3"
          name="example"
          type="checkbox"
          value="farm"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-3"
          id="example-3--label"
        >
          Farm or agricultural waste
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkboxes matches snapshot 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <div
      class="nhsuk-checkboxes"
      data-module="nhsuk-checkboxes"
      data-nhsuk-checkboxes-init=""
      id="example"
    >
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-1"
          name="example"
          type="checkbox"
          value="animal"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-1"
          id="example-1--label"
        >
          Waste from animal carcasses
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-2"
          name="example"
          type="checkbox"
          value="mines"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-2"
          id="example-2--label"
        >
          Waste from mines or quarries
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-3"
          name="example"
          type="checkbox"
          value="farm"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-3"
          id="example-3--label"
        >
          Farm or agricultural waste
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkboxes matches snapshot with an exclusive checkbox 1`] = `
<div>
  <div
    class="nhsuk-form-group"
  >
    <div
      class="nhsuk-checkboxes"
      data-module="nhsuk-checkboxes"
      data-nhsuk-checkboxes-init=""
      id="example"
    >
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-1"
          name="example"
          type="checkbox"
          value="animal"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-1"
          id="example-1--label"
        >
          Waste from animal carcasses
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-2"
          name="example"
          type="checkbox"
          value="mines"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-2"
          id="example-2--label"
        >
          Waste from mines or quarries
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-3"
          name="example"
          type="checkbox"
          value="farm"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-3"
          id="example-3--label"
        >
          Farm or agricultural waste
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__divider"
      >
        or
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive="true"
          data-checkbox-exclusive-group="example"
          id="none"
          name="example"
          type="checkbox"
          value="none"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="none"
          id="none--label"
        >
          None
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Checkboxes matches snapshot with error message 1`] = `
<div>
  <div
    class="nhsuk-form-group nhsuk-form-group--error"
  >
    <span
      class="nhsuk-error-message"
      id="example--error-message"
    >
      <span
        class="nhsuk-u-visually-hidden"
      >
        Error:
      </span>
       
      Example error
    </span>
    <div
      aria-describedby="example--error-message"
      class="nhsuk-checkboxes"
      data-module="nhsuk-checkboxes"
      data-nhsuk-checkboxes-init=""
      id="example"
    >
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-1"
          name="example"
          type="checkbox"
          value="animal"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-1"
          id="example-1--label"
        >
          Waste from animal carcasses
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-2"
          name="example"
          type="checkbox"
          value="mines"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-2"
          id="example-2--label"
        >
          Waste from mines or quarries
        </label>
      </div>
      <div
        class="nhsuk-checkboxes__item"
      >
        <input
          class="nhsuk-checkboxes__input"
          data-checkbox-exclusive-group="example"
          id="example-3"
          name="example"
          type="checkbox"
          value="farm"
        />
        <label
          class="nhsuk-label nhsuk-checkboxes__label"
          for="example-3"
          id="example-3--label"
        >
          Farm or agricultural waste
        </label>
      </div>
    </div>
  </div>
</div>
`;
